Fix: Bootstrap integration - `table-sm` stylings for the ordering icons were misaligned.
https://datatables.net/forums/discussion/80889/bs5-styling-issue-in-v2-3

--- a/css/dataTables.bootstrap.scss
+++ b/css/dataTables.bootstrap.scss
@@ -170,9 +170,26 @@ div.dt-scroll-foot {
 //
 
 // Condensed
-table.dataTable.table-condensed {
-	> thead > tr > th {
-		padding-right: 20px;
+table.dataTable.table-condensed > thead > tr {
+	th,
+	td {
+		&.dt-orderable-asc,
+		&.dt-orderable-desc,
+		&.dt-ordering-asc,
+		&.dt-ordering-desc {
+			padding-right: 4px;
+
+			span.dt-column-order {
+				right: 4px;
+			}
+		}
+
+		&.dt-type-date,
+		&.dt-type-numeric {
+			span.dt-column-order {
+				right: 4px;
+			}
+		}
 	}
 }
 
