--- a/css/dataTables.bootstrap4.scss
+++ b/css/dataTables.bootstrap4.scss
@@ -173,10 +173,17 @@ table.dataTable.table-sm > thead > tr {
 		&.dt-orderable-desc,
 		&.dt-ordering-asc,
 		&.dt-ordering-desc {
-			padding-right: 20px;
+			padding-right: 4px;
 
 			span.dt-column-order {
-				right: 5px;
+				right: 4px;
+			}
+		}
+
+		&.dt-type-date,
+		&.dt-type-numeric {
+			span.dt-column-order {
+				right: 4px;
 			}
 		}
 	}
